k8s/ingress-auth-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskapp-auth-rewrite
  namespace: taskapp
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/auth/$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: taskapp.taskapp-james-greg.xyz
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 5000
    - host: api.taskapp-james-greg.xyz
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 5000
